corpus/cpp/overload/case-02/snapshots/gcc15/dual_sink_structured/render.verbose.txt
error: [type_mismatch] type or overload mismatch @ src/main.cpp:3:49
help: compare the expected type and actual argument at the call site
raw : invalid conversion from 'const char*' to 'int'
| src/main.cpp:3:49
| int main() { const char *value = "x"; takes_int(value); }
|                                                 ^
debug: rule_id=rule.family.type_overload.structured_or_message
debug: matched_conditions=message_contains=invalid conversion, phase=semantic

note: [unknown] initializing argument 1 of 'void takes_int(int)' @ src/main.cpp:1:16
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw : initializing argument 1 of 'void takes_int(int)'
| src/main.cpp:1:16
| void takes_int(int);
|                ^
debug: rule_id=rule.family.unknown
debug: matched_conditions=no_family_rule_matched
debug: suppression_reason=generic_fallback
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output